--minimal build fails with error: Source/WebKit2/Platform/CoreIPC/ArgumentCoder.h:44:36: error: decode is not a member of WebCore::TextCheckingResult https://bugs.webkit.org/show_bug.cgi?id=114367

Patch by Vlad Vasilyeu <vasvlad@gmail.com> on 2013-04-24
Reviewed by Benjamin Poulain.

Include WebCoreArgumentCoders.h to WebEditorClientEfl.cpp from
WebKit2/Shared/ for successfully building with option --minimal

* WebProcess/WebCoreSupport/efl/WebEditorClientEfl.cpp:

Canonical link: https://commits.webkit.org/133521@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149022 268f45cc-cd09-0410-ab3c-d52691b4dbfc